[tool.poetry]
name = "iros2022"
version = "0.1.0"
description = ""
authors = ["Alessandro Conti <alessandro.conti.97@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.12"
docopt = "^0.6.2"
numpy = "^1.22.3"
pandas = "^1.4.2"
pytorch-lightning = "^1.5.10"
rich = "^12.2.0"
scikit-learn = "^1.1.2"
torchmetrics = "^0.7.2"
toml = "^0.10.2"
torch = "^1.10.1+cu113"
torchvision = "^0.11.2+cu113"
wandb = "^0.12.14"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.942"
pylint = "^2.13.7"
types-PyYAML = "^6.0.7"
types-requests = "^2.27.19"
types-toml = "^0.10.5"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools=59.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line_length = 100

[tool.mypy]
exclude = "experimental.py"
ignore_missing_imports = true
pretty = true

[tool.pylint.master]
ignore = "experimental.py"
jobs = 0
recursive = true
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-many-instance-attributes",
    "not-callable",
    "arguments-differ",
    "too-many-arguments",
    "unused-argument",
    "too-many-ancestors"
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 35

[tool.pylint.typecheck]
generated-members = ["torch"]

[tool.pylint.design]
max-locals = 20
max-parents = 10
