[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clup"
version = "0.1.0"
description = "Cluster-level pseudo-labelling for source-free cross-domain facial expression recognition"
readme = "README.md"
requires-python = "==3.9.12"
license = {file = "LICENCE"}
authors = [{name = "Alessandro Conti", email = "alessandro.conti.97@gmail.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]

dependencies = [
    "docopt == 0.6.2",
    "numpy == 1.22.3",
    "pandas == 1.4.2",
    "pytorch-lightning == 1.5.10",
    "rich == 12.2.0",
    "scikit-learn == 1.1.2",
    "torchmetrics == 0.7.2",
    "toml == 0.10.2",
    "torch == 1.10.1",
    "torchvision == 0.11.2",
    "wandb == 0.12.14",
]

[project.optional-dependencies]
dev = [
    "black == 22.3.0",
    "isort == 5.10.1",
    "mypy == 0.942",
    "pylint == 2.13.7",
    "types-PyYAML == 6.0.7",
    "types-requests == 2.27.19",
    "types-toml == 0.10.5",
]

[project.urls]
source = "https://github.com/altndrr/clup"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line_length = 100

[tool.flit.module]
name = "src"

[tool.mypy]
exclude = "experimental.py"
ignore_missing_imports = true
pretty = true

[tool.pylint.master]
ignore = "experimental.py"
jobs = 0
recursive = true
suggestion-mode = true

[tool.pylint.messages_control]
disable = [
    "invalid-name",
    "too-many-instance-attributes",
    "not-callable",
    "arguments-differ",
    "too-many-arguments",
    "unused-argument",
    "too-many-ancestors"
]

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 35

[tool.pylint.typecheck]
generated-members = ["torch"]

[tool.pylint.design]
max-locals = 20
max-parents = 10
